[gd_scene load_steps=22 format=3 uid="uid://betskp6y3f52w"]

[ext_resource type="PackedScene" uid="uid://hyfg4dysd7jj" path="res://Scenes/Objects/fire_ball.tscn" id="1_c0uoc"]
[ext_resource type="Script" path="res://Scenes/Enemies/Red_spectre.gd" id="1_hlw3p"]
[ext_resource type="Script" path="res://Scripts/Enemy/Astar.gd" id="3_jj2vc"]
[ext_resource type="Texture2D" uid="uid://cdt6taq08u0dq" path="res://Resources/Spectres/Red_Spectre.png" id="3_ni7sy"]
[ext_resource type="Script" path="res://Scripts/Enemy/Backtraking_path.gd" id="4_0aaom"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_tua3s"]
blend_mode = 1
light_mode = 2

[sub_resource type="Gradient" id="Gradient_ei2lu"]
offsets = PackedFloat32Array(0.0948276, 0.25, 0.37931, 0.474138, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.353448, 0.353448, 0.353448, 1, 0.292207, 0.292207, 0.292207, 1, 0.227563, 0.227563, 0.227563, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1oec1"]
gradient = SubResource("Gradient_ei2lu")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.7, 0.2)
metadata/_snap_enabled = true

[sub_resource type="AtlasTexture" id="AtlasTexture_cdxbk"]
atlas = ExtResource("3_ni7sy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3ybv"]
atlas = ExtResource("3_ni7sy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8rw0"]
atlas = ExtResource("3_ni7sy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptvwx"]
atlas = ExtResource("3_ni7sy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gub7"]
atlas = ExtResource("3_ni7sy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lh60"]
atlas = ExtResource("3_ni7sy")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n677w"]
atlas = ExtResource("3_ni7sy")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_finac"]
atlas = ExtResource("3_ni7sy")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_juoo8"]
atlas = ExtResource("3_ni7sy")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyaq4"]
atlas = ExtResource("3_ni7sy")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1jcto"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdxbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3ybv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8rw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptvwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gub7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lh60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n677w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_finac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juoo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyaq4")
}],
"loop": true,
"name": &"default",
"speed": 11.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kkro7"]
radius = 26.9492

[sub_resource type="CircleShape2D" id="CircleShape2D_shsp5"]
radius = 8.75

[node name="Red_Spectre" type="CharacterBody2D"]
script = ExtResource("1_hlw3p")
fire_ball = ExtResource("1_c0uoc")

[node name="PointLight2D" type="PointLight2D" parent="."]
material = SubResource("CanvasItemMaterial_tua3s")
position = Vector2(9.53674e-07, -4.76837e-07)
scale = Vector2(0.723958, 0.760417)
color = Color(0.980392, 0.65098, 0.262745, 1)
energy = 1.5
texture = SubResource("GradientTexture2D_1oec1")
texture_scale = 1.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_1jcto")
offset = Vector2(-2, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.30271e-07, -2.23517e-08)
scale = Vector2(0.225781, 0.223261)
shape = SubResource("CircleShape2D_kkro7")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Astar" type="Node" parent="."]
script = ExtResource("3_jj2vc")

[node name="Backtraking_path" type="Node" parent="."]
script = ExtResource("4_0aaom")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
scale = Vector2(0.8, 1)
shape = SubResource("CircleShape2D_shsp5")
debug_color = Color(1, 0, 0, 0.419608)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
